# Chess-Chill

./: .gitignore  CMakeLists.txt  README.md
resources/: chess960_start_positions.txt  puzzles.csv
src/: icon.rc  main.cpp
src/GUI/: Button.cpp  Button.hpp  Container.cpp  Container.hpp  HistoryPanel.cpp  HistoryPanel.hpp  Label.cpp  Label.hpp  Sprite.cpp  Sprite.hpp
src/Game/: AttackBoard.cpp  AttackBoard.hpp  AttackGenerator.cpp  AttackGenerator.hpp  Board.cpp  Board.hpp  BotPlayer.cpp  BotPlayer.hpp  Chess960Logic.cpp  Chess960Logic.hpp  Clock.cpp  Clock.hpp  Engine.cpp  Engine.hpp  Evaluator.cpp  Evaluator.hpp  FenGenerator.cpp  FenGenerator.hpp  GameHandler.cpp  GameHandler.hpp  GameLogic.cpp  GameLogic.hpp  GameSaver.cpp  GameSaver.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Move.cpp  Move.hpp  MoveTable.cpp  MoveTable.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp  Puzzle.cpp  Puzzle.hpp  PuzzleList.cpp  PuzzleList.hpp  StandardLogic.cpp  StandardLogic.hpp
src/Game/Logic/: AttackBoard.cpp  AttackBoard.hpp  AttackGenerator.cpp  AttackGenerator.hpp  Chess960Logic.cpp  Engine.cpp  Engine.hpp  Evaluator.cpp  Evaluator.hpp  FenGenerator.cpp  FenGenerator.hpp  GameLogic.cpp  GameLogic.hpp  KothLogic.cpp  KothLogic.hpp  MoveTable.cpp  MoveTable.hpp  StandardLogic.cpp  StandardLogic.hpp
src/States/: AboutState.cpp  AboutState.hpp  GameOptionsState.cpp  GameOptionsState.hpp  GameState.cpp  GameState.hpp  HistoryState.cpp  HistoryState.hpp  MenuState.cpp  MenuState.hpp  PuzzleMenuState.cpp  PuzzleMenuState.hpp  PuzzleState.cpp  PuzzleState.hpp  ReviewState.cpp  ReviewState.hpp  SettingsState.cpp  SettingsState.hpp  StatesList.hpp
src/Template/: Application.cpp  Application.hpp  ArrowNode.cpp  ArrowNode.hpp  Constants.hpp  GameOptions.cpp  GameOptions.hpp  OldGames.cpp  OldGames.hpp  Random.cpp  Random.hpp  RectNode.cpp  RectNode.hpp  ResourceIdentifiers.hpp  SceneNode.cpp  SceneNode.hpp  Settings.cpp  Settings.hpp  SoundPlayer.cpp  SoundPlayer.hpp  SpriteNode.cpp  SpriteNode.hpp  State.cpp  State.hpp  StateIdentifiers.hpp  Utility.cpp  Utility.hpp
